导航栏的封装

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -2,8 +2,8 @@
 
 :root {
   --color-text: #666;
-  --color-high-text: #ff5777;
-  --color-tint: #ff8198;
+  --color-high-text: #6799FF;
+  --color-tint: #7ca5f9;
   --color-background: #fff;
   --font-size: 14px;
   --line-height: 1.5;
